# poetry-blake

./: README.md  pyproject.toml
data/: coffee.csv
notebooks/: csv_to_parquet.ipynb
notebooks/.ipynb_checkpoints/: csv_to_parquet-checkpoint.ipynb
