[tool.poetry]
name = "blake"
version = "0.1.0"
description = ""
authors = ["Jens X Augustsson <jens@augustsson.eu>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
jupyter = "^1.0.0"
ipykernel = "^5.5.3"
pyarrow = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
